# jinsub

./: .ftpconfig  Readme.md  default.pbs  jinsub.cabal  tes.txt
app/: Main.hs
src/: Config.hs  Edit.hs  Execution.hs  Interactive.hs  OptionsParser.hs  Template.hs
