name:                jinsub
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/jinsub#readme
license:             BSD3
license-file:        LICENSE
author:              Yonghao Jin
maintainer:          jyh1@mail.ustc.edu.cn
copyright:           2017 Yonghao Jin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OptionsParser
                     , Execution
                     , Interactive
  other-modules:
                       Config
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , optparse-applicative
                     , turtle
                     , text
                     , system-filepath
                     , raw-strings-qq
                    --  , async
                     , process
  default-language:    Haskell2010

executable jinsub
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jinsub
  default-language:    Haskell2010

test-suite jinsub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jinsub
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/jinsub
